
[workspace]
members = [
    "exact_replay_executor",
    "simulation_executor",
    "task",
    "task_builder",
    "task_macros",
    "test_tasks",
    "live_executor",
    "live_replay_executor",
    "testing",
    "logging",
]
resolver = "3"

[workspace.lints.clippy]
all = "deny"
undocumented_unsafe_blocks = "deny"


[workspace.lints.rust]
dead_code = "allow" # Not ideal, but im iterating a lot and this is getting chatty

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
