[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
task = { path = "../task" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "task/serde"]

[lints]
workspace = true
