[package]
name = "task"
version = "0.1.0"
edition = "2024"

[lib]

[features]
testing = []
serde = ["dep:serde"]

[dependencies]
crossbeam-queue = "0.3"                       # Used for thread-safe pub/sub queues
libc = "0.2.186"                              # Used for retreiving time from the system
serde = { workspace = true, optional = true } # Allows serde loggability for task types

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pub_sub_latency"
harness = false

[lints]
workspace = true
